docker-shit-quality-assurance/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: virtual-qa
  name: springboot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot
          image: mr1dentity/backend-image:qa
          ports:
            - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: virtual-qa
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
