docker-shit-quality-assurance/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-certs
  name: backend-ingress
  namespace: virtual-qa
spec:
  rules:
    - host: api.qa.65.co.ucll.cloud
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springboot-service
              port:
                number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - api.qa.65.co.ucll.cloud
    secretName: api-ingress-cert # < cert-manager will store the created certificate in this secret.
